--- a/lab-python-list-comprehension.ipynb
+++ b/lab-python-list-comprehension.ipynb
@@ -75,11 +75,154 @@
     "\n",
     "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "25595a0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total price: 10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "products = [\"t-shirts\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "\n",
+    "def initialize_inventory(products):\n",
+    "    inventory = {product: int(input(f\"Enter the quantity of {product}s available: \")) for product in products}\n",
+    "    return inventory\n",
+    "\n",
+    "def get_customers_order():\n",
+    "    customers_order = {order.strip() for order in input(\"Please enter the products you want to order, separated by commas: \").split(\",\")}\n",
+    "    return customers_order  \n",
+    "\n",
+    "def update_inventory(customers_order, inventory):\n",
+    "    update_inv = {product: inventory[product] - 1 if product in customers_order else inventory[product] for product in inventory}\n",
+    "    return update_inv\n",
+    "\n",
+    "def calculate_total_price(customer_orders):\n",
+    "    total_price = sum(float(input(f\"Please enter the price of [products]: \")) for product in customer_orders)\n",
+    "    return (total_price)\n",
+    "\n",
+    "inventory = initialize_inventory(products)\n",
+    "customers_order = get_customers_order()\n",
+    "total_price = calculate_total_price(customers_order)\n",
+    "\n",
+    "print(\"Total price:\", total_price)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fcf752f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t-shirts': 10, 'mug': 10, 'hat': 10, 'book': 10, 'keychain': 10}\n",
+      "{'hat', 'mug'}\n",
+      "{'t-shirts': 10, 'mug': 9, 'hat': 9, 'book': 10, 'keychain': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "inventory = initialize_inventory(products)\n",
+    "print(inventory)\n",
+    "\n",
+    "customers_order = get_customers_order()\n",
+    "print(customers_order)\n",
+    "\n",
+    "updated_inv = update_inventory(customers_order, inventory)\n",
+    "print(updated_inv)\n",
+    "\n",
+    "total_price = calculate_total_price(customers_order)\n",
+    "print(total_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "1357f2cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_customers_order():\n",
+    "    num_orders = int(input(\"Enter the number of customer orders:\"))\n",
+    "    orders = {input(\"Please enter the names of the products\") for i in range(num_orders)} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "5630f2ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'hat', 'mug'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "orders = get_customers_order()\n",
+    "print(orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fea385e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t-shirts': 5, 'mug': 53, 'hat': 4, 'book': 5, 'keychain': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def update_inventory(customer_orders, inventory):\n",
+    "    updated_inventory1 = {product: quantity - 1 if product in customer_orders else quantity\n",
+    "        for product, quantity in inventory.items()}\n",
+    "    return updated_inventory1\n",
+    "\n",
+    "updated_inventory1 = update_inventory(customers_order, inventory)\n",
+    "print(updated_inventory1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b5f1f2af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total price: 10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Total price:\", total_price)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -93,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
